apps/ljwx-platform/base/service-admin-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-platform-admin-ui
  labels:
    app: ljwx-platform-admin-ui
spec:
  type: ClusterIP
  selector:
    app: ljwx-platform-admin-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
