apps/ljwx-platform/base/service-screen.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-platform-screen
  labels:
    app: ljwx-platform-screen
spec:
  type: ClusterIP
  selector:
    app: ljwx-platform-screen
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
