apps/ljwx-platform/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-platform
  labels:
    app: ljwx-platform
spec:
  type: ClusterIP
  selector:
    app: ljwx-platform
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
