apps/ljwx-platform/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ljwx-platform-ingress
  namespace: ljwx-platform
  annotations:
    cert-manager.io/cluster-issuer: dnspod-letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: platform-backend.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform
                port:
                  number: 80
    - host: platform-admin.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform-admin-ui
                port:
                  number: 80
    - host: platform-screen.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform-screen
                port:
                  number: 80
  tls:
    - hosts:
        - platform-backend.lingjingwanxiang.cn
      secretName: platform-backend-lingjingwanxiang-cn-tls
    - hosts:
        - platform-admin.lingjingwanxiang.cn
      secretName: platform-admin-lingjingwanxiang-cn-tls
    - hosts:
        - platform-screen.lingjingwanxiang.cn
      secretName: platform-screen-lingjingwanxiang-cn-tls
